<resources>
    <string name="app_name">covidapp</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="web_client_id">170299032357-8rf2vfm8fagier5iahe9p8148nkdql98.apps.googleusercontent.com</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="gender">Gender</string>
    <string name="enter_gender">Enter gender</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="age">Age</string>
    <string name="body_ache">Body ache</string>
    <string name="healthy">Healthy</string>
    <string name="at_risk">At risk</string>
    <string name="health_status">Health Assessment Questionnaire</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="image">image</string>
    <string name="log_out">Log out</string>
    <string name="question1">Are you experiencing any of the following symptoms?</string>
    <string name="question2">Do you have any of the following pre-existing conditions?</string>
    <string name="question3">Have you travelled in the past 14 days to any of the states below?</string>
    <string name="andhra_pradesh">Andhra Pradesh</string>
    <string name="fever">Fever</string>
    <string name="lung_disease">Lung Disease</string>
    <string name="diabetes">Diabetes</string>
    <string name="last_10_14_days">Last 10-14 days</string>
    <string name="last_5_10_days">Last 5-10 days</string>
    <string name="last_0_5_days">Last 0-5 days</string>
    <string name="cough">Cough</string>
    <string name="sore_throat">Sore throat</string>
    <string name="asthma">Asthma</string>
    <string name="htg_sensei">htg_sensei</string>
    <string name="health_questionnaire">Health questionnaire</string>
    <string name="do_you_have_any_of_the_pre_existing_conditions">Do you have any of the pre-existing conditions?</string>
    <string name="have_you_come_in_contact_with_any_covid_19_patient_in_the_last_14_days">Have you come in contact with any Covid-19 patient in the last 14 days?</string>
    <string name="are_feeling_any_of_the_below_symptoms">Are you feeling any of the below symptoms?</string>
    <string name="none">None</string>
    <string name="enter_age">Enter Age</string>
    <string name="health_assessment_questionnaire">Health Assessment questionnaire</string>
    <string name="covid_updates">Nationwide Covid Updates</string>
    <string name="statewise_covid_updates">Statewise Covid Updates</string>
    <string name="submit">Submit</string>
    <string name="number_of_cases">Number of Cases: </string>
    <string name="cases_today">Cases Today: </string>
    <string name="scan">Scan</string>
    <string name="mac_address">MAC Address</string>
    <string name="enter_bluetooth_mac_address">Enter Bluetooth MAC Address</string>
    <string name="city_name">city_name</string>
    <string name="state_name">state_name</string>
    <string name="country_name">country_name</string>
    <string name="postal_code">postal_code</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="healthy_or_not">health-status</string>
    <string name="dash">Dash</string>
    <string name="pink_eyes">Pink eyes</string>
    <string name="hearing_impairment">Hearing impairment</string>
    <string name="breath">Difficulty in Breathing</string>
    <string name="loss">loss of senses of smell and taste</string>
    <string name="hypertension">Hypertension</string>
    <string name="kidney">Kidney Disorder</string>
    <string name="have_you_got_tested_for_covid_19_in_the_last_5_days">Have you got tested for covid-19 in last 5 days?</string>
    <string name="Yes">Yes</string>
    <string name="yes">Yes, and I tested negative.</string>
    <string name="yes_2">Yes, and tested positive.</string>
    <string name="no">No</string>
    <string name="have_you_come_in_contact_with_any_covid_19">Have you came in contact with any person who tested positive for covid or been alerted about the same via our app?</string>
    <string name="title_activity_instructions_macaddress">instructionsMACAddress</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="instructions">Instructions</string>
    <string name="note_that_bluetooth_must_be_on_for_this_and_please_turn_on_bluetooth_in_your_device_if_not">Note that bluetooth must be on for this and please turn on bluetooth in your device if not.</string>
    <string name="_4_scroll_down_and_the_bluetooth_address_will_be_shown_in_the_list">4) Scroll down and the “Bluetooth address” will be shown in the list.</string>
    <string name="_3_scroll_down_to_the_bottom_and_tap_status">3) Scroll down to the bottom and tap “Status“.</string>
    <string name="_2_scroll_down_to_the_bottom_and_tap_about_phone_about_device_or_about_tablet">2) Scroll down to the bottom and tap “About Phone“, “About device“, or “About tablet“.</string>
    <string name="_1_from_the_home_screen_open_the_app_drawer_then_open_settings">1) From the Home screen, open the app drawer, then open “Settings“.</string>
</resources>