<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    android:background="#1C2F54">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_name" />

        <TextView
            android:id="@+id/stateName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state_name" />

        <TextView
            android:id="@+id/postalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/postal_code" />

        <TextView
            android:id="@+id/countryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/country_name" />


        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time" />

        <TextView
            android:id="@+id/health_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthy_or_not" />


    </LinearLayout>

</androidx.cardview.widget.CardView>
