<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questionnaire">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".questionnaire"
        android:paddingBottom="200dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="20dp"
            android:text="@string/are_feeling_any_of_the_below_symptoms"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <CheckBox
                android:id="@+id/symp_fever_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:text="@string/fever"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/symp_sore_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:text="@string/sore_throat"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/symp_cough_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:text="@string/cough"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/symp_breathing_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:text="@string/breath"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/symp_body_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:text="@string/body_ache"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/symp_loss_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:text="@string/loss"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/symp_pink_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:text="@string/pink_eyes"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/symp_hearing_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:text="@string/hearing_impairment"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/none1_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:text="@string/none" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:gravity="center"
            android:text="@string/health_questionnaire"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/do_you_have_any_of_the_pre_existing_conditions"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <CheckBox
                android:id="@+id/lung_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lung_disease"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <CheckBox
                android:id="@+id/asthma_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asthma"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <CheckBox
                android:id="@+id/diabetes_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diabetes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <CheckBox
                android:id="@+id/hypertension_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hypertension"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <CheckBox
                android:id="@+id/kidney_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kidney"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <CheckBox
                android:id="@+id/none2_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:text="@string/none" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/have_you_got_tested_for_covid_19_in_the_last_5_days"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12">

            <CheckBox
                android:id="@+id/yes_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <CheckBox
                android:id="@+id/yes_2_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <CheckBox
                android:id="@+id/no_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/have_you_come_in_contact_with_any_covid_19"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
            app:layout_constraintStart_toStartOf="@+id/linearLayout4"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10">

            <CheckBox
                android:id="@+id/ten_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_10_14_days"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <CheckBox
                android:id="@+id/five_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_5_10_days"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <CheckBox
                android:id="@+id/zero_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_0_5_days"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ten_id" />

            <CheckBox
                android:id="@+id/none3_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                app:layout_constraintStart_toStartOf="@+id/five_id"
                app:layout_constraintTop_toBottomOf="@+id/five_id" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>