<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">


    <TextView
        android:id="@+id/save"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_bg"
        android:backgroundTint="@color/green_100"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:text="@string/save"
        android:textColor="@color/green_300"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textColor="@color/text_parent_color"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="name"
        android:background="@drawable/edit_bg"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_name"
        android:inputType="textNoSuggestions"
        android:padding="15dp"
        android:textSize="16sp"
        android:theme="@style/EditTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/gender"
        android:textColor="@color/text_parent_color"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit_text" />

    <EditText
        android:id="@+id/gender_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="name"
        android:background="@drawable/edit_bg"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_gender"
        android:inputType="textNoSuggestions"
        android:padding="15dp"
        android:textSize="16sp"
        android:theme="@style/EditTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gender"
        app:layout_constraintTop_toBottomOf="@+id/gender"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/phone_number"
        android:textColor="@color/text_parent_color"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_edit_text" />

    <EditText
        android:id="@+id/phone_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="name"
        android:background="@drawable/edit_bg"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_phone_number"
        android:inputType="number"
        android:padding="15dp"
        android:textSize="16sp"
        android:theme="@style/EditTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gender"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        tools:ignore="SpeakableTextPresentCheck,TextFields" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/age"
        android:textColor="@color/text_parent_color"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_edit_text" />

    <EditText
        android:id="@+id/age_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="name"
        android:background="@drawable/edit_bg"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_age"
        android:inputType="number"
        android:padding="15dp"
        android:textSize="16sp"
        android:theme="@style/EditTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gender"
        app:layout_constraintTop_toBottomOf="@+id/age"
        tools:ignore="SpeakableTextPresentCheck,TextFields" />

    <TextView
        android:id="@+id/macAddress"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/mac_address"
        android:textColor="@color/text_parent_color"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_edit_text" />

    <EditText
        android:id="@+id/mac_address_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="name"
        android:background="@drawable/edit_bg"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_bluetooth_mac_address"
        android:padding="15dp"
        android:textSize="16sp"
        android:theme="@style/EditTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/gender"
        app:layout_constraintTop_toBottomOf="@+id/macAddress"
        tools:ignore="SpeakableTextPresentCheck,TextFields" />

    <TextView
        android:id="@+id/questionnaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edit_bg"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:text="@string/health_assessment_questionnaire"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/mac_address_edit"
        app:layout_constraintTop_toBottomOf="@+id/mac_address_edit" />


</androidx.constraintlayout.widget.ConstraintLayout>